--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel = "stylesheet" href = "/CSS/index.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Figtree:wght@600;800&display=swap" rel="stylesheet">
   
   <title>Frontend Mentor | Blog preview card</title>
 
@@ -16,31 +19,33 @@
 </head>
 <body>
 <div class = "course">
-  <div class = "tag">
-  Learning
+    <div class = "banner">
+      <img src = "/assets/images/illustration-article.svg"class = "img">
+    </div>
+  <div class = "learn">
+  <button class = "tag">Learning</button>
   </div>
    
   <div class = "date">
   Published 21 Dec 2023
   </div>
   <div class = "title">
-  HTML & CSS foundations
+    <h1>
+    HTML & CSS foundations
+    </h1>
   </div>
   <div class = "content">
   These languages are the backbone of every website, defining structure, content, and presentation.
   </div>
 
-<div class = "pic">
-<img src = "/assets/images/image-avatar.webp" alt = "picture of author" width = "50">
-</div>
-
 <div class = "author">
-  Greg Hooper
+<img src = "/assets/images/image-avatar.webp" alt = "picture of author" class = "pic">
+  <p>Greg Hooper</p>
 </div>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Ayodeji Onawunmi</a>.
-  </div>
+</div>
+<div class="attribution">
+  Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+  Coded by <a href="#">Ayodeji Onawunmi</a>.
 </div>
 </body>
 </html>
