--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link rel = "stylesheet" href = "/CSS/index.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,6 +12,103 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
+    body
+{
+  display :flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column; 
+  background-color: hsl(47, 88%, 63%);
+  font-family: Figtree;
+  font-weight: 600;
+  font-size: 13px;
+}
+.course
+{
+  display :flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column; 
+  background-color: hsl(0, 0%, 100%);
+  border-style: solid;
+  border-width: 0.8px;
+  padding-top: 15px;
+  width : 280px;
+  margin-top: 100px;
+  border-radius : 15px;
+  transition: box-shadow 1s;
+  margin-bottom: 20px;
+}
+
+.course:hover
+{
+  box-shadow: 5px 5px 1px rgba(0,0,0,1.0);
+}
+
+.tag
+{
+  background-color: hsl(47, 88%, 63%);
+  color: black;
+  border-width: 0px;
+  border-radius: 5px;
+  font-family: FigTree;
+  font-weight: 600;
+}
+.learn
+{
+margin-right: 180px;
+font-size: 12px;
+font-weight: bold;
+margin-bottom: 10px;
+}
+.img
+{
+  width : 250px;
+  border-width: 0px;
+  border-radius: 10px;
+}
+.banner
+{
+margin-bottom: 15px;
+}
+.author
+{
+  font-size: 12px;
+  font-weight: 800;
+  display: flex;
+  flex-direction: row;
+  margin-right: 120px;
+  padding-bottom: 15px;
+}
+.date
+{
+  margin-right: 120px;
+  font-weight: 600;
+  font-size: 12px;
+  padding-bottom: 5px;
+}
+.title
+{
+  margin-right: 30px;
+  font-size: 9px;
+  font-weight: bold;
+  padding-top: 0px;
+  margin-bottom: 0px;
+}
+.content
+{
+  padding: 15px;
+  padding-right: 13px;
+  font-size: 11px;
+  color: hsl(0, 0%, 50%);
+  padding-top: 0px;
+}
+
+.pic
+{
+width : 40px;
+padding-right : 15px;
+}
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
