This is my sixth commit

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ padding-right : 15px;
 <body>
 <div class = "course">
     <div class = "banner">
-      <img src = "/assets/images/illustration-article.svg" class = "img">
+      <img src = "/assets/images/illustration-article.svg" alt = "banner image"class = "img">
     </div>
   <div class = "learn">
   <button class = "tag">Learning</button>
